# point_cloud_renderer

./: .gitmodules  CMakeLists.txt  README.md
data/: point_shader.frag  point_shader.vert
viz/: CMakeLists.txt
viz/include/: CMakeLists.txt  logging.h  mpc_queue.h  ply.h  point_cloud.h
viz/src/: CMakeLists.txt  main.cpp  persistence.cpp  ply_loader.cpp
viz/test/: CMakeLists.txt  persistence.cpp  ply_conversion.cpp
